// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`servie-finalhandler should not return a body when using HEAD 1`] = `
Object {
  "body": Object {
    "bodyUsed": false,
    "buffered": true,
    "hasBody": false,
    "headers": Object {},
  },
  "bytesTransferred": 0,
  "finished": false,
  "headers": Object {
    "content-security-policy": "default-src 'self'",
    "x-content-type-options": "nosniff",
  },
  "started": false,
  "statusCode": 404,
  "statusMessage": undefined,
  "trailers": Object {},
}
`;

exports[`servie-finalhandler should return a 404 response 1`] = `
Object {
  "body": Object {
    "bodyUsed": false,
    "buffered": true,
    "hasBody": true,
    "headers": Object {
      "content-length": "12",
      "content-type": "text/plain",
    },
  },
  "bytesTransferred": 0,
  "finished": false,
  "headers": Object {
    "content-security-policy": "default-src 'self'",
    "x-content-type-options": "nosniff",
  },
  "started": false,
  "statusCode": 404,
  "statusMessage": undefined,
  "trailers": Object {},
}
`;
